--- a/composer.json
+++ b/composer.json
@@ -9,10 +9,11 @@
       "email": "nkeneng.junior@gmail.com"
     }
   ],
+  "homepage": "https://github.com/nkeneng/femanagerextended-master.git",
   "type": "typo3-cms-extension",
   "license": "GPL-3.0",
   "require": {
-    "typo3/cms": ">=7.6.0 <10.0.0"
+    "typo3/cms-core": ">=7.6.0 <11.0.0"
   },
   "autoload": {
     "psr-4": {
@@ -20,11 +21,16 @@
     }
   },
   "replace": {
-    "femanagerextended": "self.version",
     "typo3-ter/femanagerextended": "self.version"
+  },
+  "config": {
+    "vendor-dir": ".Build/vendor",
+    "bin-dir": ".Build/bin"
   },
   "extra": {
     "typo3/cms": {
+      "cms-package-dir": "{$vendor-dir}/typo3/cms",
+      "web-dir": ".Build/Web",
       "extension-key": "femanagerextended"
     }
   }
